Add box shadows to all dialog boxen
Added for consistency, since PopupPanels (used in drop-down menus) have
them. And they look nice.

--- a/src/edu/colorado/csdms/wmt/client/WMT.css
+++ b/src/edu/colorado/csdms/wmt/client/WMT.css
@@ -400,6 +400,7 @@ body, table td, select, button {
   color: colorAbisso;
   background: white;
   border: 2px solid colorAcquaProfonda;
+  box-shadow: 2px 2px 1px lightgray;
 }
 .wmt-DialogBox .dialogTop {
   background: colorAbisso;
