--- a/src/edu/colorado/csdms/wmt/client/WMT.css
+++ b/src/edu/colorado/csdms/wmt/client/WMT.css
@@ -193,6 +193,7 @@ body, table td, select, button {
   padding: 5px 7px;
   border: 1px solid colorAcquaProfonda;
   border-bottom: 1px solid colorAbisso;
+  cursor: pointer;
 }
 .wmt-Button:hover {
   background-color: colorTerra;
@@ -230,6 +231,7 @@ body, table td, select, button {
   background-color: colorTerraTerra;
   border: 2px solid colorAcquaProfonda;
   height: 60px;
+  cursor: pointer;
 }
 
 /* A ComponentCell that displays a component. */
@@ -276,7 +278,6 @@ body, table td, select, button {
 .wmt-ComponentCell-MenuCell {
   padding: 2px;
   margin-right: 3px;
-  cursor: default; /* for Firefox */
 }
 
 /* Rules for WMT widgets derived from a GWT PopupPanel. */
@@ -390,6 +391,7 @@ body, table td, select, button {
   width: 210px; /* calculated by comparison with ValueBoxen */
   height: 32px;
   background-color: colorTerraTerra;
+  cursor: pointer;
 }
 .wmt-DroplistBox-upload {
   width: 175px; /* calculated by comparison with DroplistBox */
