--- a/src/edu/colorado/csdms/wmt/client/WMT.css
+++ b/src/edu/colorado/csdms/wmt/client/WMT.css
@@ -272,10 +272,11 @@ body, table td, select, button {
   cursor: pointer;
 }
 
-/* Items shown in a WMT PopupPanel. */
+/* Items shown in a WMT PopupPanel. The padding on the right fills the
+   backgound color across the width of the panel. */
 .wmt-PopupPanelItem, .wmt-ComponentSelectionMenuItem, .wmt-PopupPanelCheckBoxItem {
   color: colorMediumDark;
-  padding: 5px 40px 5px 5px;
+  padding: 5px 36px 5px 5px;
 }
 .wmt-PopupPanelItem, .wmt-ComponentSelectionMenuItem {
   cursor: pointer;
