--- a/src/edu/colorado/csdms/wmt/client/WMT.css
+++ b/src/edu/colorado/csdms/wmt/client/WMT.css
@@ -172,7 +172,7 @@ body, table td, select, button {
 /*
    A consistent style for all buttons.
 */
-.wmt-Button, .wmt-ActionPanelButton {
+.wmt-Button, .wmt-ActionPanelButton, .wmt-UploadButton {
   color: colorDark;
   background-color: colorLight;
   padding: 5px 7px;
@@ -182,6 +182,15 @@ body, table td, select, button {
 }
 .wmt-Button:hover {
   background-color: colorMediumLight;
+}
+
+/*
+   The button shown for file uploads. Explicitly setting its size solves
+   a problem with Firefox versus Chrome and Safari.
+*/
+.wmt-UploadButton {
+  width: 32px;
+  height: 32px;
 }
 
 /*
