Clean up styles on navbar
It's not perfect, but it's better. This fixes an issue with the
sign-out button being out of alignment on Firefox. The login name
and sign-out buttons now appear consistently aligned on Firefox,
Chrome, and Safari.

Also, login name is now a button, preparing for a preferences system!

--- a/src/edu/colorado/csdms/wmt/client/WMT.css
+++ b/src/edu/colorado/csdms/wmt/client/WMT.css
@@ -121,18 +121,17 @@ body, table td, select, button {
 }
 .wmt-UserPanel {
   float: right;
-  margin: 8px 10px 8px 0px;
+  margin-right: 10px;
 }
 .wmt-UserPanelButton {
-  display: inline-block;
   color: white;
   background-color: colorMedium;
   font-size: fontMedium;
-  line-height: 1.25;
-  padding: 6px 12px;
+  padding: 0px 12px;
   cursor: default;
   margin: 2px;
-  border: 2px solid colorMedium;
+  height: 35px;
+  border: 1px solid colorMedium;
 }
 .wmt-UserPanelButton-signOut {
   cursor: pointer;
