Set the minimum height for a DescriptionCell
This is to acomodate the new "subheading" type.

I'm concerned that this change may not play nice across browsers.

--- a/src/edu/colorado/csdms/wmt/client/WMT.css
+++ b/src/edu/colorado/csdms/wmt/client/WMT.css
@@ -353,6 +353,7 @@ body, table td, select, button {
 .wmt-ParameterDescription {
    margin: 0 1em 0 25px; /* top right bottom left */
    color: colorMediumDark;
+   min-height: 38px; /* accomodate subheading type */
 }
 .wmt-ParameterDescription-group {
    padding-left: 20px;
